<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/main_background_bright">

       <LinearLayout 
           android:orientation="horizontal"
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content" 
           android:id="@+id/layout1">


    <CheckBox 
        android:checked="true"   
        android:id="@+id/sound_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
       
    <ImageView
        android:layout_toRightOf="@+id/sound_checkbox"
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/speaker2" /> 
        
   <Spinner
    android:id="@+id/languages_spinner"
    android:gravity="right"
    
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:entries="@array/LANG"
    android:prompt="@string/LANG_prompt" />
    
</LinearLayout>

       
       
   <TextView
    
       android:gravity="center"
       android:padding="20dp"
        android:layout_below="@+id/layout1"
        android:background="@drawable/customborder"
        android:id="@+id/translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  
        android:layout_marginTop="10dp"
    	android:layout_centerInParent="true"
        android:text="@string/translation"
        android:textStyle="bold"
        android:textColor="#CD7F32"
        android:textSize="24sp" />
    
    
           


<ScrollView
	android:layout_marginTop="20dp"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_below="@+id/translation" >
   
	<RadioGroup
    	android:orientation="vertical"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
    	android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"	>
    
        <RadioButton
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph1" 
            android:checked="false" 
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
                    
        <RadioButton
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph2"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph3"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph4"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph5"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph6"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph7"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph8"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph9"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph10"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
         
        <RadioButton
            android:id="@+id/text11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph11"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph12"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph13"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph14"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph15"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph16"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph17"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />
        
        <RadioButton
            android:id="@+id/text18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alph18"	
            android:textColor="@drawable/button_text_color"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:background="@drawable/custombuttonbackground"
    		android:button="@android:color/transparent" />    
	</RadioGroup>
      
</ScrollView>
 
</RelativeLayout>